# stan

./: .coverage  .gitignore  Dockerfile  HundredPlus.csv  README.md  Season.csv  SeasonRecord.csv  app.py  app.wsgi  aws.md  build_db.cmd  build_db.py  build_xl.py  db_dump.sql  db_schema.sql  dump_db.sql  ec2_notes.md  extract_xl_to_csv.py  import_xl_batting.ipynb  load_excel.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  stan.sqlite  test_excel_import.ipynb  test_loading.ipynb  up.ps1  xl_schema.sql
app/: __init__.py  config.py  csv_loader.py  defapp.py  excel_loader.py  load_defs.py  routes.py  stanapp.py  stanapp.wsgi  utils.py
app/loaders/: batting_importer.py  csv_loader.py  excel_loader.py  load_defs.py  table_loader.py
app/pages/: __init__.py  appearances.py  batting_averages.py  bowling_averages.py  captain_record.py  captains.py  fielding.py  history.py  hundreds.py  match.py  matches.py  partnerships.py  player.py  player_list.py  player_year.py  season.py  seasons.py  sidebar_menu.py
app/static/: main.css
app/templates/: centuries.html  index.html  player.html  players.html  season_record.html  seasons.html
app/types/: __init__.py  all_time_batting.py  all_time_bowling.py  all_time_fielding.py  batting_average.py  best_bowling.py  bowling_average.py  captain.py  career_summary.py  classes.py  history.py  hundred_plus.py  importables.py  match.py  match_batting.py  match_bowling.py  partnership.py  performance.py  player.py  season.py  (+1 more)
docx/: Final Averages 2017.docx  Final Averages 2018.docx  Final Averages 2021.docx  Final Averages 2022.docx  pyplaycricket.md
flaskr/: __init__.py
models/: century.py  csv_utils.py  performance.py  season.py  season_record.py
stan/: stopwatch.py  utils.py
static/: index.html
templates/: base.html  index.html
test/: test_season.py
tests/: test_batting_importer.py  test_bowling_importer.py  test_csv_loader.py  test_excel_loader.py  test_match_batting.py  test_match_bowling.py  test_utils.py
util/: db.py
xldata/: TOCC Averages 2002.xlsm  TOCC Averages 2006.xlsm  TOCC Averages 2008.xlsm  TOCC Averages 2019.xlsm  TOCC Averages 2021.xlsm  TOCC Averages 2022.xlsm
(+134 files in other folders)
